Bug 91525 - Crash when opened/closed Color Replacer Dialog / Draw Drawing
Summary: Crash when opened/closed Color Replacer Dialog / Draw Drawing
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
5.0.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.0.0 target:5.0.0.0.beta2
Keywords: bibisected, regression
Depends on:
Blocks: VclPtr
  Show dependency treegraph
 
Reported: 2015-05-23 13:00 UTC by baffclan
Modified: 2015-12-17 09:12 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
WinDbg backtrace (14.37 KB, text/plain)
2015-05-23 13:17 UTC, pierre-yves samyn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description baffclan 2015-05-23 13:00:10 UTC
Steps to Reproduce:
1. Start LibO-Dev
2. Make a New Drow Drawing
3. Open Color Replacer, Menu - Tools - Color Replacer
4. Appear Color Replacer Dialog 
5. Close Color Replacer
6. Open Color Replacer
7. Crashed LibO-Dev


Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: c110c506c3c9c9f50b55acd5c6927e2865888d44
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-05-23_09:46:25
Locale: ja-JP (ja_JP)
Comment 1 pierre-yves samyn 2015-05-23 13:17:11 UTC
Hi

I reproduce on windows 7/64 & Version: 5.0.0.0.beta1
Build ID: 0a16c3dda4150008d9be6f24cbd15ac198d116d3
Locale: fr-FR (fr_FR)


Some details: 
- no need to draw something first
- the color replacer has no titlebar on my platform

I set status to New & join a windbg backtrace


Regards
Pierre-Yves
Comment 2 pierre-yves samyn 2015-05-23 13:17:41 UTC
Created attachment 115895 [details]
WinDbg backtrace
Comment 3 Michael 2015-05-23 13:38:20 UTC
Confirmed in 5.0, linux 64bit. It's a regression; bibisect below.

Also I get this line written to console when it crashes:
warn:legacy.osl:22018:1:editeng/source/items/frmitems.cxx:476: unknown MemberId

$ git bisect log
# bad: [c0fbc9b85ec523099dceb0f4f778fb10042efbd7] 2015-05-19: source-hash-158b50763962f66515062300e265839828463efa
# good: [e4b0a61cedc6ac0e65a4a110fd83edd8295f4856] 2014-11-20: source-hash-d273a60bfdbf9bb7623bed38667ec0647753157c
git bisect start 'c0fbc9b85ec523099dceb0f4f778fb10042efbd7' 'e4b0a61cedc6ac0e65a4a110fd83edd8295f4856'
# good: [935d2b58beb350acf647a664a1e97376503b8acb] 2015-02-18: source-hash-dd4bd0ee74fae3d7e3a16e018021da173152571b
git bisect good 935d2b58beb350acf647a664a1e97376503b8acb
# good: [7e67865d7214e3089ffceeaac1ba916f03ac21c0] 2015-04-04: source-hash-b326270fb921b3c2e7fff2da76ebae33adcaef3d
git bisect good 7e67865d7214e3089ffceeaac1ba916f03ac21c0
# good: [9ccc3e23269eebdb13eaa34c7231b7b9f6035c90] 2015-04-26: source-hash-3a96d8ead86dc210085f09076fd270f247442f0a
git bisect good 9ccc3e23269eebdb13eaa34c7231b7b9f6035c90
# bad: [54e8e3308771ab73b9de0e52bdef20826f428fab] 2015-05-07: source-hash-6e78bf76f3a10b43475e1bd801bdcbb9ce62f668
git bisect bad 54e8e3308771ab73b9de0e52bdef20826f428fab
# skip: [0f7da7628876aad0c28a577a70d6a660dfa1ab4e] 2015-05-01: source-hash-5a24b94662414fb9470be9c5d9c8b28c6ad42b5b
git bisect skip 0f7da7628876aad0c28a577a70d6a660dfa1ab4e
# bad: [18c79871a724a95167d0cce88a6be2df138dc964] 2015-05-02: source-hash-393c51cee8bc3de5a2a9f4e04161c59e8712f631
git bisect bad 18c79871a724a95167d0cce88a6be2df138dc964
# bad: [06421cdb5e5880c2f8232a04f521a341edf08de3] 2015-04-29: source-hash-2932d2db599c09ecce3faa2d627e9ee4f251183a
git bisect bad 06421cdb5e5880c2f8232a04f521a341edf08de3
# good: [1042e18eb884e17cbdd170a589d3c6db21455c01] 2015-04-27: source-hash-f0edb677f09ad338e22ac3b5d91497b4479e0b3c
git bisect good 1042e18eb884e17cbdd170a589d3c6db21455c01
# good: [af526ee52f2c296e0f17bc385d4001b9322818e7] 2015-04-28: source-hash-4fee05e680217e876210b341f904df9441a0b7cd
git bisect good af526ee52f2c296e0f17bc385d4001b9322818e7
# first bad commit: [06421cdb5e5880c2f8232a04f521a341edf08de3] 2015-04-29: source-hash-2932d2db599c09ecce3faa2d627e9ee4f251183a
Comment 4 Michael Meeks 2015-05-25 19:54:26 UTC
Thanks for the report; fixed =)
Comment 5 Commit Notification 2015-05-25 19:55:49 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=20ddd5fe50bb2a9c62d6279ff118437fdbaf2102

tdf#91525 - dispose SfxControllerItem member.

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 baffclan 2015-05-26 10:32:18 UTC
Cannot reproduce on Windows 7 Pro x64

Version: 5.1.0.0.alpha1+
Build ID: 692c886f937c525d6bfcb541917a5114b085efa9
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-05-25_23:24:51
Locale: ja-JP (ja_JP)

Thanks for fixing this.
Comment 7 Commit Notification 2015-05-26 13:01:02 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9aebad8b58a7ee36284e465a40101d2a045d00dd&h=libreoffice-5-0

tdf#91525 - dispose SfxControllerItem member.

It will be available in 5.0.0.0.beta2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Robinson Tryon (qubit) 2015-12-17 09:12:12 UTC Comment hidden (obsolete)