tdf#91525 - dispose SfxControllerItem member.

Change-Id: I71b32c1db2f4695deb90412e83b9e7883e9bf1d7